[package]
name = "mob-in-the-middle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { features = ["derive"], version = "4" }
regex = "1.7"
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "net",
    "io-util",
] }
lazy_static = "1"
itertools = "0.10"
